--- a/src/main/resources/webapp/static/components/page/service/service.html
+++ b/src/main/resources/webapp/static/components/page/service/service.html
@@ -14,7 +14,30 @@
                 </li>
             </ul>
 
-            <h5 style="text-align: center">更多应用，敬请期待。</h5>
+            <h5 style="margin-top: 100px" class="mui-content-padded">其他应用</h5>
+
+            <ul class="mui-table-view mui-list">
+                <i class=" mui-pull-left iconfont icon-plane"></i>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right" href="http://m.ctrip.com/html5/flight/#&do_not_show_add_to_home_tip=1">机票预订
+                    </a>
+                </li>
+                <i class=" mui-pull-left iconfont icon-train"></i>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right" href="http://m.ctrip.com/webapp/train/">火车票代购
+                    </a>
+                </li>
+                <i class=" mui-pull-left iconfont icon-bus"></i>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right" href="http://m.ctrip.com/webapp/bus/">汽车票预订
+                    </a>
+                </li>
+                <i class=" mui-pull-left iconfont icon-car"></i>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right" href="http://m.ctrip.com/webapp/car/">专车预订
+                    </a>
+                </li>
+            </ul>
         </div>
 
     </div>
