--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -5600,6 +5600,18 @@ html, body {
 .icon-users:before {
   content: "\e602"; }
 
+.icon-plane:before {
+  content: "\e60b"; }
+
+.icon-train:before {
+  content: "\e60a"; }
+
+.icon-car:before {
+  content: "\e60c"; }
+
+.icon-bus:before {
+  content: "\e604"; }
+
 .mui-list:before {
   height: 0; }
 
@@ -5729,6 +5741,18 @@ html, body {
 
 .icon-users:before {
   content: "\e602"; }
+
+.icon-plane:before {
+  content: "\e60b"; }
+
+.icon-train:before {
+  content: "\e60a"; }
+
+.icon-car:before {
+  content: "\e60c"; }
+
+.icon-bus:before {
+  content: "\e604"; }
 
 .mui-list:before {
   height: 0; }
