增加其他服务

--- a/src/main/resources/webapp/static/css/style.css
+++ b/src/main/resources/webapp/static/css/style.css
@@ -98,6 +98,9 @@ html, body {
   position: absolute;
   z-index: 1; }
 
+.ellipsis2 .iconfont {
+  padding-top: 10px; }
+
 .iconfont + .mui-table-view-cell > a {
   padding-left: 45px; }
 
