--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -11,7 +11,7 @@
                 <li class="mui-table-view-cell">
                     <a >
                         {{mine.email}}
-                        <button v-on="tap:unBind" class="mui-btn mui-btn-danger">解绑</button>
+                        <button v-on="tap:unBind" class="mui-btn mui-btn-outlined mui-btn-danger">解绑</button>
                     </a>
                 </li>
             </ul>
