--- a/src/main/resources/webapp/static/components/page/calendar/calendar.html
+++ b/src/main/resources/webapp/static/components/page/calendar/calendar.html
@@ -1,6 +1,6 @@
 <div class="page-calendar"  >
     <header class="mui-bar mui-bar-nav">
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="#search"></a>
+        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" v-on="tap:toRouter('search')"></a>
         <h5 class="mui-title">
             日期选择
         </h5>
