--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -14,7 +14,7 @@
                         {{dateStr}}
                     </p>
                 </div>
-                <button class="mui-btn mui-btn-primary" v-on="tap:orderSeat">
+                <button class="mui-btn mui-btn-primary" v-on="click:orderSeat">
                     提交预订
                 </button>
             </li>
@@ -34,7 +34,7 @@
             </div>
             <table class="bus-body">
                 <tr v-repeat="r in bus.rows">
-                    <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="tap:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
+                    <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="click:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
                         <a class="iconfont" v-text="getText(r,$index)"  >
                         </a>
                     </td>
