--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -2,7 +2,7 @@
     <header class="mui-bar mui-bar-nav">
         <h5 class="mui-title">{{bus.name}}({{bus.sn}})
         </h5>
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="#/search/result"></a>
+        <a class=" mui-icon mui-icon-left-nav mui-pull-left" href="#/search/result"></a>
         <a class="mui-icon mui-icon-home-filled mui-pull-right" href="#/search"></a>
     </header>
     <div class="mui-content">
