--- a/src/main/resources/webapp/static/components/page/relation/relation.html
+++ b/src/main/resources/webapp/static/components/page/relation/relation.html
@@ -1,6 +1,6 @@
 <div class="page-calendar" v-transition="slideInRight" >
     <header class="mui-bar mui-bar-nav">
-        <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" href="#config"></a>
+        <a class="mui-icon mui-icon-left-nav mui-pull-left" href="#config"></a>
         <h5 class="mui-title">
             联系人
         </h5>
