--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -11,7 +11,7 @@
                 <li class="mui-table-view-cell">
                     <a >
                         {{mine.email}}
-                        <button v-on="click:unBind" class="mui-btn mui-btn-outlined mui-btn-negative">解绑</button>
+                        <!--<button v-on="click:unBind" class="mui-btn mui-btn-outlined mui-btn-negative">解绑</button>-->
                     </a>
                 </li>
             </ul>
@@ -20,7 +20,7 @@
                 <i class=" mui-pull-left iconfont icon-users"></i>
                 <li class="mui-table-view-cell">
                     <a class="mui-navigate-right" href="#relation">
-                        关联用户
+                        委托用户
                     </a>
                 </li>
             </ul>
