--- a/src/main/resources/webapp/static/components/page/relation/relation.html
+++ b/src/main/resources/webapp/static/components/page/relation/relation.html
@@ -1,24 +1,32 @@
-<div class="page-calendar" v-transition="slideInRight" >
+<div class="page-relation" >
     <header class="mui-bar mui-bar-nav">
         <a class="mui-icon mui-icon-left-nav mui-pull-left" href="#config"></a>
         <h5 class="mui-title">
             联系人
         </h5>
-        <a class="mui-pull-right mui-btn-link" >添加</a>
+        <a class="mui-pull-right mui-icon mui-icon-refresh" v-on="click:getDelegation"></a>
     </header>
     <div class="mui-content">
         <h5 class="mui-content-padded">
             每个用户最多可以绑定三个联系人
         </h5>
         <ul class="mui-table-view">
-            <li class="mui-table-view-cell mui-media" v-repeat="u in users">
-               <a class="mui-navigate-right">
-                   <div class="mui-media-body" >
-                       {{u.name}}
-                       <p>{{u.mail}}</p>
-                   </div>
-               </a>
+            <li class="mui-table-view-cell mui-media" v-repeat="u in delegations">
+                <a >
+                    <div class="mui-media-body" >
+                        {{u.name}}
+                        <p>{{u.email}}</p>
+                    </div>
+                    <button class="mui-btn mui-btn-negative mui-btn-outlined" v-on="click:delDelegation(u._id)">
+                        取消
+                    </button>
+                </a>
             </li>
         </ul>
+        <div style="padding: 15px;">
+            <a style="padding: 5px;" v-if="delegations.length<3" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/query">
+                <span class="mui-icon mui-icon-plus"></span>
+                添加</a>
+        </div>
     </div>
 </div>
