--- a/src/main/resources/webapp/static/components/page/relation/query/query.html
+++ b/src/main/resources/webapp/static/components/page/relation/query/query.html
@@ -1,6 +1,6 @@
 <div class="page-query"  >
     <header class="mui-bar mui-bar-nav">
-        <div class="mui-input-row mui-search mui-pull-left" style="max-width: 80%">
+        <div class="mui-input-row mui-search mui-pull-left" style="width: 80%">
             <input type="search" class="mui-input-clear" placeholder="请输入姓名查询" v-model="name" >
         </div>
         <a class="mui-pull-right mui-btn-link" href="#relation">取消</a>
