--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -4,6 +4,7 @@
         <h5 class="mui-title">
             查询结果
         </h5>
+        <a class="mui-icon mui-icon-refresh mui-pull-right" v-on="click:getResult"></a>
     </header>
 
     <div class="mui-content">
