--- a/src/main/resources/webapp/admin/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/admin/static/components/page/bus/bus.html
@@ -9,14 +9,15 @@
             <input type="button" class="button button-small bg-main" data-mask="1" data-width="50%"  v-on="click:addBus" value="新增车辆" />
         </div>
         <table class="table table-hover">
-            <tr><th width="100">车辆名</th><th width="100">车牌号</th><th width="*">目的地</th><th width="100">发车时间</th><th width="100">状态</th><th width="200">操作</th></tr>
-            <tr v-repeat="c in buses">
-                <td>{{c.name}}</td>
-                <td>{{c.sn}}</td>
-                <td>{{c.destination}}</td>
-                <td>{{c.goff}}</td>
-                <td>{{c.online == 0?"停用":"启用"}}</td>
-                <td>
+            <tr><th width="120">车辆照片</th><th width="120">车辆名</th><th width="100">车牌号</th><th width="*">目的地</th><th width="100">发车时间</th><th width="100">状态</th><th width="200">操作</th></tr>
+            <tr v-repeat="c in buses" >
+                <td ><img width="64" height="64"  class="img-border radius-small" v-attr="src:c.src||'/admin/static/images/128.png'"></td>
+                <td >{{c.name}}</td>
+                <td >{{c.sn}}</td>
+                <td >{{c.destination}}</td>
+                <td >{{c.goff}}</td>
+                <td >{{c.online == 0?"停用":"启用"}}</td>
+                <td >
                     <a v-on="click:editBus(c)" class="button border-blue button-little" href="javascript:;">修改</a>
                     <a class="button border-yellow button-little" v-on="click:delBus(c._id)" href="javascript:;" onclick="{if(confirm('确认删除?')){return true;}return false;}">删除</a>
                     <a href="#/home/bus/{{c._id}}" class="button border-blue button-little" href="javascript:;">车位管理</a>
@@ -88,6 +89,19 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <div class="label">
+                                照片
+                            </div>
+                            <div class="field">
+                                <a class="button bg-main input-file" href="javascript:void(0);">
+                                    + 上传照片
+                                    <input size="100" type="file" v-on="change:upLoadImg" accept="image/gif, image/jpeg, image/png" />
+                                </a>
+                                <img v-if="bus.src" v-attr="src:bus.src"  width="128" height="128" class="img-border radius-small" />
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="dialog-foot">
