--- a/src/main/resources/webapp/admin/static/pkg/all.css
+++ b/src/main/resources/webapp/admin/static/pkg/all.css
@@ -50,288 +50,6 @@
 
 /*# sourceMappingURL=loading.css.map */
 
-/*!/components/page/order/order.css*/
-.dateBlock {
-  text-align: center; }
-
-.dateActive {
-  padding-left: 0;
-  padding-right: 0;
-  background-color: #00AAEE;
-  font-weight: bold; }
-
-/*# sourceMappingURL=order.css.map */
-
-/*!/components/page/home/home.css*/
-body {
-  background-color: #f2f9fd; }
-
-.panel {
-  background: #fff; }
-
-form .form-group:last-child {
-  padding-bottom: 0; }
-
-.passcode {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 32px;
-  margin: 1px;
-  border-left: solid 1px #ddd;
-  text-align: center;
-  line-height: 32px;
-  border-radius: 0 4px 4px 0; }
-
-.lefter {
-  position: relative;
-  float: left;
-  width: 180px;
-  margin-right: -180px;
-  background: #e6f2fb;
-  text-align: center; }
-
-.righter {
-  float: right;
-  width: 100%;
-  padding-top: 15px;
-  background: #e6f2fb; }
-
-.mainer {
-  margin-left: 180px; }
-
-.logo {
-  border-bottom: solid 1px #b5cfd9;
-  padding: 23px 10px; }
-
-.admin-navbar {
-  border-bottom: solid 5px #09c;
-  padding: 0 15px; }
-
-.admin-nav li {
-  display: inline-block; }
-
-.admin-nav ul {
-  display: none; }
-
-.admin-nav ul li {
-  float: none;
-  display: block; }
-
-.admin-nav ul ul li {
-  list-style: circle;
-  margin-left: 15px; }
-
-.admin-nav .active a {
-  background: #09c;
-  color: #fff;
-  border-radius: 4px 4px 0 0; }
-
-.admin-nav .active ul {
-  display: block;
-  position: fixed;
-  left: 0;
-  width: 180px;
-  margin-top: 41px; }
-
-.admin-nav .active ul a {
-  background: transparent;
-  color: #333;
-  border-radius: 0; }
-
-.admin-nav .active .active a {
-  background: #e6f2fb; }
-
-.admin-nav .active li.active:before {
-  content: " ";
-  height: 1px;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  background-color: #b5cfd9; }
-
-.admin-nav .active li.active:after {
-  content: " ";
-  height: 1px;
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  background-color: #b5cfd9; }
-
-.admin-bread {
-  background: #f2f9fd;
-  border-left: solid 1px #b5cfd9;
-  border-bottom: solid 1px #b5cfd9;
-  line-height: 20px; }
-
-.admin-bread .bread {
-  margin-bottom: 0; }
-
-.admin-bread span {
-  float: right;
-  font-size: 12px;
-  color: #666;
-  line-height: 36px; }
-
-.admin {
-  padding: 30px;
-  background: #fff;
-  position: fixed;
-  border-left: solid 1px #b5cfd9;
-  right: 0;
-  bottom: 0;
-  top: 87px;
-  left: 180px;
-  overflow: auto; }
-
-.alert {
-  margin-bottom: 20px; }
-
-.admin-panel td {
-  line-height: 24px; }
-
-.admin-panel td .button {
-  line-height: 16px; }
-
-.admin-panel .pagination .active {
-  background: #fff; }
-
-/*# sourceMappingURL=home.css.map */
-
-/*!/components/page/home/home.scss*/
-body {
-  background-color: #f2f9fd; }
-
-.panel {
-  background: #fff; }
-
-form .form-group:last-child {
-  padding-bottom: 0; }
-
-.passcode {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 32px;
-  margin: 1px;
-  border-left: solid 1px #ddd;
-  text-align: center;
-  line-height: 32px;
-  border-radius: 0 4px 4px 0; }
-
-.lefter {
-  position: relative;
-  float: left;
-  width: 180px;
-  margin-right: -180px;
-  background: #e6f2fb;
-  text-align: center; }
-
-.righter {
-  float: right;
-  width: 100%;
-  padding-top: 15px;
-  background: #e6f2fb; }
-
-.mainer {
-  margin-left: 180px; }
-
-.logo {
-  border-bottom: solid 1px #b5cfd9;
-  padding: 23px 10px; }
-
-.admin-navbar {
-  border-bottom: solid 5px #09c;
-  padding: 0 15px; }
-
-.admin-nav li {
-  display: inline-block; }
-
-.admin-nav ul {
-  display: none; }
-
-.admin-nav ul li {
-  float: none;
-  display: block; }
-
-.admin-nav ul ul li {
-  list-style: circle;
-  margin-left: 15px; }
-
-.admin-nav .active a {
-  background: #09c;
-  color: #fff;
-  border-radius: 4px 4px 0 0; }
-
-.admin-nav .active ul {
-  display: block;
-  position: fixed;
-  left: 0;
-  width: 180px;
-  margin-top: 41px; }
-
-.admin-nav .active ul a {
-  background: transparent;
-  color: #333;
-  border-radius: 0; }
-
-.admin-nav .active .active a {
-  background: #e6f2fb; }
-
-.admin-nav .active li.active:before {
-  content: " ";
-  height: 1px;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  background-color: #b5cfd9; }
-
-.admin-nav .active li.active:after {
-  content: " ";
-  height: 1px;
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  background-color: #b5cfd9; }
-
-.admin-bread {
-  background: #f2f9fd;
-  border-left: solid 1px #b5cfd9;
-  border-bottom: solid 1px #b5cfd9;
-  line-height: 20px; }
-
-.admin-bread .bread {
-  margin-bottom: 0; }
-
-.admin-bread span {
-  float: right;
-  font-size: 12px;
-  color: #666;
-  line-height: 36px; }
-
-.admin {
-  padding: 30px;
-  background: #fff;
-  position: fixed;
-  border-left: solid 1px #b5cfd9;
-  right: 0;
-  bottom: 0;
-  top: 87px;
-  left: 180px;
-  overflow: auto; }
-
-.alert {
-  margin-bottom: 20px; }
-
-.admin-panel td {
-  line-height: 24px; }
-
-.admin-panel td .button {
-  line-height: 16px; }
-
-.admin-panel .pagination .active {
-  background: #fff; }
-
 /*!/static/css/pintuer.css*/
 html{margin:0;padding:0;border:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
 body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, q, dl, dt, dd, ol, ul, li, fieldset, form, legend, caption, tbody, tfoot, thead, article, aside, dialog, figure, footer, header, hgroup, nav, section{margin:0;padding:0;border:0;font-size:14px;font:inherit;vertical-align:baseline;}
@@ -1412,6 +1130,349 @@ a:focus,a:hover{color:#09c;} /*链接-悬浮颜色*/
 {color:#333;border-color:#3bc;background-color:#3bc;} /*融合-文本色-边框-背景*/
 .button.border-dot:hover,.button.border-dot:focus,.button.bg-dot:hover,.button.bg-dot:focus
 {color:#fff;border-color:#f00;background-color:#f00;} /*点缀色-文本-边框-背景*/
+/*!/components/page/bus/bus.css*/
+.page-bus table td{
+    vertical-align: middle;
+}
+/*!/components/page/order/order.css*/
+.dateBlock {
+  text-align: center; }
+
+.dateActive {
+  padding-left: 0;
+  padding-right: 0;
+  background-color: #00AAEE;
+  font-weight: bold; }
+
+/*# sourceMappingURL=order.css.map */
+
+/*!/components/page/companyOrder/busSeat/busSeat.scss*/
+.page-busSeat .bus-header {
+  text-align: center;
+  font-size: 12px;
+  padding: 20px 0z; }
+  .page-busSeat .bus-header span {
+    padding: 3px 40px;
+    background-color: #dd524d;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #000; }
+  .page-busSeat .bus-header a {
+    height: 15px;
+    width: 15px;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left: 5px; }
+  .page-busSeat .bus-header .void {
+    background-color: #00BB9C; }
+  .page-busSeat .bus-header .order {
+    background-color: #33475F; }
+.page-busSeat .bus-body {
+  width: 100%;
+  text-align: center;
+  background-color: #efeff4; }
+  .page-busSeat .bus-body td {
+    padding: 4px 10px; }
+  .page-busSeat .bus-body a {
+    display: block;
+    height: 50px;
+    color: #60418c;
+    font-size: 16px;
+    line-height: 38px;
+    font-weight: bold;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat; }
+  .page-busSeat .bus-body td.icon-seat-void {
+    width: inherit; }
+    .page-busSeat .bus-body td.icon-seat-void a {
+      background-image: url("/static/images/seat-void.png");
+      width: 100%;
+      color: #fff; }
+  .page-busSeat .bus-body td.icon-seat-order {
+    width: inherit; }
+    .page-busSeat .bus-body td.icon-seat-order a {
+      background-image: url("/static/images/seat-order.png");
+      width: 100%;
+      color: #fff; }
+  .page-busSeat .bus-body td.icon-seat-select {
+    width: inherit; }
+    .page-busSeat .bus-body td.icon-seat-select a {
+      background-image: url("/static/images/seat-select.png") !important;
+      color: yellow;
+      width: 100%; }
+
+/*!/components/page/home/home.css*/
+body {
+  background-color: #f2f9fd; }
+
+.panel {
+  background: #fff; }
+
+form .form-group:last-child {
+  padding-bottom: 0; }
+
+.passcode {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 32px;
+  margin: 1px;
+  border-left: solid 1px #ddd;
+  text-align: center;
+  line-height: 32px;
+  border-radius: 0 4px 4px 0; }
+
+.lefter {
+  position: relative;
+  float: left;
+  width: 180px;
+  margin-right: -180px;
+  background: #e6f2fb;
+  text-align: center; }
+
+.righter {
+  float: right;
+  width: 100%;
+  padding-top: 15px;
+  background: #e6f2fb; }
+
+.mainer {
+  margin-left: 180px; }
+
+.logo {
+  border-bottom: solid 1px #b5cfd9;
+  padding: 23px 10px; }
+
+.admin-navbar {
+  border-bottom: solid 5px #09c;
+  padding: 0 15px; }
+
+.admin-nav li {
+  display: inline-block; }
+
+.admin-nav ul {
+  display: none; }
+
+.admin-nav ul li {
+  float: none;
+  display: block; }
+
+.admin-nav ul ul li {
+  list-style: circle;
+  margin-left: 15px; }
+
+.admin-nav .active a {
+  background: #09c;
+  color: #fff;
+  border-radius: 4px 4px 0 0; }
+
+.admin-nav .active ul {
+  display: block;
+  position: fixed;
+  left: 0;
+  width: 180px;
+  margin-top: 41px; }
+
+.admin-nav .active ul a {
+  background: transparent;
+  color: #333;
+  border-radius: 0; }
+
+.admin-nav .active .active a {
+  background: #e6f2fb; }
+
+.admin-nav .active li.active:before {
+  content: " ";
+  height: 1px;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  background-color: #b5cfd9; }
+
+.admin-nav .active li.active:after {
+  content: " ";
+  height: 1px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  background-color: #b5cfd9; }
+
+.admin-bread {
+  background: #f2f9fd;
+  border-left: solid 1px #b5cfd9;
+  border-bottom: solid 1px #b5cfd9;
+  line-height: 20px; }
+
+.admin-bread .bread {
+  margin-bottom: 0; }
+
+.admin-bread span {
+  float: right;
+  font-size: 12px;
+  color: #666;
+  line-height: 36px; }
+
+.admin {
+  padding: 30px;
+  background: #fff;
+  position: fixed;
+  border-left: solid 1px #b5cfd9;
+  right: 0;
+  bottom: 0;
+  top: 87px;
+  left: 180px;
+  overflow: auto; }
+
+.alert {
+  margin-bottom: 20px; }
+
+.admin-panel td {
+  line-height: 24px; }
+
+.admin-panel td .button {
+  line-height: 16px; }
+
+.admin-panel .pagination .active {
+  background: #fff; }
+
+/*# sourceMappingURL=home.css.map */
+
+/*!/components/page/home/home.scss*/
+body {
+  background-color: #f2f9fd; }
+
+.panel {
+  background: #fff; }
+
+form .form-group:last-child {
+  padding-bottom: 0; }
+
+.passcode {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 32px;
+  margin: 1px;
+  border-left: solid 1px #ddd;
+  text-align: center;
+  line-height: 32px;
+  border-radius: 0 4px 4px 0; }
+
+.lefter {
+  position: relative;
+  float: left;
+  width: 180px;
+  margin-right: -180px;
+  background: #e6f2fb;
+  text-align: center; }
+
+.righter {
+  float: right;
+  width: 100%;
+  padding-top: 15px;
+  background: #e6f2fb; }
+
+.mainer {
+  margin-left: 180px; }
+
+.logo {
+  border-bottom: solid 1px #b5cfd9;
+  padding: 23px 10px; }
+
+.admin-navbar {
+  border-bottom: solid 5px #09c;
+  padding: 0 15px; }
+
+.admin-nav li {
+  display: inline-block; }
+
+.admin-nav ul {
+  display: none; }
+
+.admin-nav ul li {
+  float: none;
+  display: block; }
+
+.admin-nav ul ul li {
+  list-style: circle;
+  margin-left: 15px; }
+
+.admin-nav .active a {
+  background: #09c;
+  color: #fff;
+  border-radius: 4px 4px 0 0; }
+
+.admin-nav .active ul {
+  display: block;
+  position: fixed;
+  left: 0;
+  width: 180px;
+  margin-top: 41px; }
+
+.admin-nav .active ul a {
+  background: transparent;
+  color: #333;
+  border-radius: 0; }
+
+.admin-nav .active .active a {
+  background: #e6f2fb; }
+
+.admin-nav .active li.active:before {
+  content: " ";
+  height: 1px;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  background-color: #b5cfd9; }
+
+.admin-nav .active li.active:after {
+  content: " ";
+  height: 1px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  background-color: #b5cfd9; }
+
+.admin-bread {
+  background: #f2f9fd;
+  border-left: solid 1px #b5cfd9;
+  border-bottom: solid 1px #b5cfd9;
+  line-height: 20px; }
+
+.admin-bread .bread {
+  margin-bottom: 0; }
+
+.admin-bread span {
+  float: right;
+  font-size: 12px;
+  color: #666;
+  line-height: 36px; }
+
+.admin {
+  padding: 30px;
+  background: #fff;
+  position: fixed;
+  border-left: solid 1px #b5cfd9;
+  right: 0;
+  bottom: 0;
+  top: 87px;
+  left: 180px;
+  overflow: auto; }
+
+.alert {
+  margin-bottom: 20px; }
+
+.admin-panel td {
+  line-height: 24px; }
+
+.admin-panel td .button {
+  line-height: 16px; }
+
+.admin-panel .pagination .active {
+  background: #fff; }
+
 /*!/components/component/loading/loading.scss*/
 .layui-layer-shade {
   top: 0;
@@ -1461,6 +1522,65 @@ a:focus,a:hover{color:#09c;} /*链接-悬浮颜色*/
   top: 15px;
   font-size: 0;
   line-height: initial; }
+
+/*!/components/page/companyOrder/busSeat/busSeat.css*/
+.page-busSeat .bus-header {
+  text-align: center;
+  font-size: 12px;
+  padding: 20px 0z; }
+  .page-busSeat .bus-header span {
+    padding: 3px 40px;
+    background-color: #dd524d;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #000; }
+  .page-busSeat .bus-header a {
+    height: 15px;
+    width: 15px;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left: 5px; }
+  .page-busSeat .bus-header .void {
+    background-color: #00BB9C; }
+  .page-busSeat .bus-header .order {
+    background-color: #33475F; }
+.page-busSeat .bus-body {
+  width: 100%;
+  text-align: center;
+  background-color: #efeff4; }
+  .page-busSeat .bus-body td {
+    padding: 4px 10px; }
+  .page-busSeat .bus-body a {
+    display: block;
+    height: 50px;
+    color: #60418c;
+    font-size: 16px;
+    line-height: 38px;
+    font-weight: bold;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat; }
+  .page-busSeat .bus-body td.icon-seat-void {
+    width: inherit; }
+    .page-busSeat .bus-body td.icon-seat-void a {
+      background-image: url("/static/images/seat-void.png");
+      width: 100%;
+      color: #fff; }
+  .page-busSeat .bus-body td.icon-seat-order {
+    width: inherit; }
+    .page-busSeat .bus-body td.icon-seat-order a {
+      background-image: url("/static/images/seat-order.png");
+      width: 100%;
+      color: #fff; }
+  .page-busSeat .bus-body td.icon-seat-select {
+    width: inherit; }
+    .page-busSeat .bus-body td.icon-seat-select a {
+      background-image: url("/static/images/seat-select.png") !important;
+      color: yellow;
+      width: 100%; }
+
+/*# sourceMappingURL=busSeat.css.map */
 
 /*!/components/page/order/order.scss*/
 .dateBlock {
