--- a/src/main/resources/webapp/admin/static/components/page/user/user.html
+++ b/src/main/resources/webapp/admin/static/components/page/user/user.html
@@ -70,7 +70,7 @@
                                 用户类型
                             </div>
                             <div class="field">
-                                <select class="input" v-model="user.admin">
+                                <select class="input" v-model="user.admin" number>
                                     <option value=0>普通用户</option>
                                     <option value=1>管理员</option>
                                 </select>
