--- a/src/main/resources/webapp/admin/static/components/page/companyOrder/busSeat/busSeat.css
+++ b/src/main/resources/webapp/admin/static/components/page/companyOrder/busSeat/busSeat.css
@@ -1,7 +1,7 @@
 .page-busSeat .bus-header {
   text-align: center;
   font-size: 12px;
-  padding: 20px 0z; }
+  padding: 20px 0; }
   .page-busSeat .bus-header span {
     padding: 3px 40px;
     background-color: #dd524d;
