--- a/src/main/resources/webapp/admin/static/components/page/desk/desk.html
+++ b/src/main/resources/webapp/admin/static/components/page/desk/desk.html
@@ -20,7 +20,7 @@
             <br>
         </div>
         <div class="xm9">
-            <div class="alert alert-green"><strong>注意：</strong>今日预定座位总数为123个。</div>
+            <!--<div class="alert alert-green"><strong>注意：</strong>今日预定座位总数为123个。</div>-->
 
             <div class="panel">
                 <table class="table">
