--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -22,6 +22,7 @@
         <ul class="mui-table-view">
             <li class="mui-table-view-cell" style="font-size: 12px">
                 {{selectText}}
+                    <select class="mui-input-select mui-pull-right input-select" v-model="selectDelegate" options="delegate"></select>
             </li>
         </ul>
     </div>
