--- a/src/main/resources/webapp/admin/static/components/page/companyOrder/busSeat/busSeat.html
+++ b/src/main/resources/webapp/admin/static/components/page/companyOrder/busSeat/busSeat.html
@@ -8,8 +8,8 @@
    </div>
    <table class="bus-body">
     <tr v-repeat="r in bus.rows">
-     <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="tap:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
-      <a class="iconfont" v-text="getText(r,$index)"  >
+     <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-class="seatClass(r,$index)" style="position: relative;">
+      <a style="cursor: pointer" class="iconfont" v-text="getText(r,$index)"  v-on="click:clickSeat(this,r,$index)" >
       </a>
      </td>
     </tr>
