--- a/src/main/resources/webapp/static/components/page/bus/bus.css
+++ b/src/main/resources/webapp/static/components/page/bus/bus.css
@@ -88,3 +88,7 @@
       border-top: 1px solid #666; }
     .page-bus .silder-nav li:last-child {
       border-bottom: 1px solid #666; }
+  .page-bus .input-select {
+    height: 21px;
+    float: right;
+    width: 80px; }
