--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -106,6 +106,10 @@
       border-top: 1px solid #666; }
     .page-bus .silder-nav li:last-child {
       border-bottom: 1px solid #666; }
+  .page-bus .input-select {
+    height: 21px;
+    float: right;
+    width: 80px; }
 
 /*# sourceMappingURL=bus.css.map */
 
@@ -257,6 +261,10 @@
       border-top: 1px solid #666; }
     .page-bus .silder-nav li:last-child {
       border-bottom: 1px solid #666; }
+  .page-bus .input-select {
+    height: 21px;
+    float: right;
+    width: 80px; }
 
 /*!/components/page/order/order.scss*/
 .page-order {
