--- a/src/main/resources/webapp/admin/static/components/component/nav/nav.html
+++ b/src/main/resources/webapp/admin/static/components/component/nav/nav.html
@@ -6,8 +6,7 @@
     <div class="mainer">
         <div class="admin-navbar">
             <span class="float-right">
-            	<a class="button button-little bg-main" href="#" target="_blank">前台首页</a>
-                <a class="button button-little bg-yellow" href="#">注销登录</a>
+                <a class="button button-little bg-yellow" href="login.html">注销登录</a>
             </span>
             <ul class="nav nav-inline admin-nav">
                 <li v-class="active:f.key == amenu"  v-repeat="f in func" >
