--- a/src/main/resources/webapp/static/components/page/company/company.html
+++ b/src/main/resources/webapp/static/components/page/company/company.html
@@ -1,5 +1,5 @@
 <div class="page-company">
-    <div class="mui-control-content mui-active">
+    <div class="mui-control-content mui-active" v-show="!isQuery">
         <header class="mui-bar-nav mui-bar">
             <h5 class="mui-title">
                 承包商订位
@@ -7,22 +7,56 @@
             <a class="mui-icon mui-icon-left-nav mui-pull-left" href="#service"></a>
         </header>
         <div class="mui-content">
-            <ul class="mui-table-view mui-grid-view mui-grid-9">
-                <li class="mui-table-view-cell mui-media mui-col-xs-4">
-                    <a href="#">
-                        <span class="mui-icon mui-icon mui-icon-compose"></span>
-                        <div class="mui-media-body">团队订位</div>
+            <ul class="mui-table-view mui-list">
+                <i class=" iconfont icon-users"></i>
+                <li class="mui-table-view-cell">
+                    <a >承包商
+                        <select class="company-select" v-model="selectCompany" options="companies">
+                            <option>请选择</option>
+                        </select>
                     </a>
                 </li>
-                <li class="mui-table-view-cell mui-media mui-col-xs-4">
-                    <a href="#">
-                        <span class="mui-icon mui-icon-search"></span>
-                        <div class="mui-media-body">订位查询</div>
+                <i class="iconfont icon-time"></i>
+                <li class="mui-table-view-cell">
+                    <a  >出发时间
+                        <select class="company-select" v-model="selectDate" options="date">
+                            <option>请选择</option>
+                        </select>
                     </a>
                 </li>
             </ul>
+            <button class="mui-btn mui-btn-block" id="btn-search" v-on="click:onSearch()" >
+                <span class="mui-icon mui-icon-search"></span>查询
+            </button>
 
         </div>
+
+    </div>
+    <div class="mui-control-content mui-active" v-show="isQuery">
+        <header class="mui-bar-nav mui-bar">
+            <h5 class="mui-title">
+                查询结果
+            </h5>
+            <a class="mui-icon mui-icon-left-nav mui-pull-left" v-on="tap:toBack"></a>
+        </header>
+        <div class="mui-content" style="height: {{height}}px;overflow-y: auto;">
+            <table class="table">
+                <thead>
+                <th>序号</th>
+                <th>姓名</th>
+                <th>车辆</th>
+                <th>车位</th>
+                </thead>
+                <tr v-repeat="u in users">
+                    <td>{{$index+1}}</td>
+                    <td>{{u.name}}</td>
+                    <td>{{u.bus}}</td>
+                    <td>{{u.seat}}</td>
+                </tr>
+            </table>
+
+        </div>
+
     </div>
 
 </div>
